<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current"
            android:icon="@drawable/ic_menu_current"
            android:title="@string/menu_current" />
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_menu_browse"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favorites" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
