<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhiteTransparent">

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textFontWeight="900"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textview_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_title"
            android:layout_centerHorizontal="true"
            android:text="@string/_1234"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/photoview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_header"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:src="@drawable/imgtall" />

    <RelativeLayout
        android:id="@+id/view_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#77FFFFFF"
        android:layout_margin="8dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageview_share"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_button"
            app:srcCompat="@drawable/ic_share"
            android:scaleType="centerInside"
            android:contentDescription="@string/share"
            />

        <ImageView
            android:id="@+id/imageview_transcript"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/imageview_share"
            android:background="@drawable/round_button"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_description_gray"
            android:scaleType="centerInside"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/description"
            />

        <ImageView
            android:id="@+id/imageview_favorite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/imageview_transcript"
            android:background="@drawable/round_button"
            android:layout_marginTop="8dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_favorite_gray"
            android:contentDescription="@string/favorite"
            />
    </RelativeLayout>

    <include layout="@layout/progress_indicator" />

    <TextView
        android:id="@+id/textview_unavailable"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/data_not_available"
        android:visibility="gone"
        android:layout_height="wrap_content" />


</RelativeLayout>